[SONAR] cleanup issues, fix some tests